# Show_Cpu_Temperature

./: CMakeLists.txt  README.md  XPixmap.h  get_host_name.c  get_host_name.h  jetColor.h  read_temperature.c  read_temperature.h  showTemperature.c  showTemperature.h  sync_XAlarm.c  sync_XAlarm.h  utilities.c  utilities.h  xpm_definition.c  xpm_definition.h
